# crac-server

./: .gitignore  README.md  pyproject.toml  tasti.py
crac_server/: __init__.py  app.py  config.ini  config.py  logger.py  logging.conf  server.log.2022-02-01
crac_server/component/: button_control.py  roof_control.py
crac_server/component/camera/: __init__.py  camera.py  streaming.py
crac_server/component/camera/foscam/: camera.py
crac_server/component/camera/simulator/: camera.py
crac_server/component/camera/tapo/: camera.py
crac_server/component/curtains/: curtains.py  factory_curtain.py
crac_server/component/curtains/simulator/: curtains.py
crac_server/component/mock/: roof_control.py
crac_server/component/roof/: __init__.py  roof_control.py
crac_server/component/roof/simulator/: roof_control.py
crac_server/component/telescope/: __init__.py  telescope.py
crac_server/component/telescope/indi/: telescope.py
crac_server/component/telescope/simulator/: telescope.py
crac_server/component/telescope/theskyx/: disconnect_tele.js  get_alt_az.js  set_move_track.js  sync_tele.js  telescope.py
crac_server/images/: label.py  tasti.py
crac_server/service/: button_service.py  camera_service.py  curtains_service.py  roof_service.py  telescope_service.py
src/service/: roof_service.py
